Added google signin functionality

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -3,7 +3,6 @@
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content padding>
   <h2>Welcome to Ionic!</h2>
   <p>
@@ -14,4 +13,5 @@
     Take a look at the <code>pages/</code> directory to add or change tabs,
     update any existing page or create new pages.
   </p>
+  <button ion-button (click)='gsuiteAuth()'>google</button>
 </ion-content>
